<resources>
    <string name="app_name">IIDX Tools</string>
    <string name="minBpm">Min BPM (or BPM of song)</string>
    <string name="maxBpm">Max BPM</string>
    <string name="greenNumber">Green Number</string>
    <string name="btnCalculate">Calculate</string>
    <string name="title_activity_sudden_plus_table">Sudden+ Table</string>
    <string name="hiSpeedHeader">Hi-speeds</string>
    <string name="minBPMHeaderPlaceholder">Min BPM</string>
    <string name="maxBPMHeaderPlaceholder">Max BPM</string>
    <string name="error_MaxBPMLessThanMinBPM">"Max BPM must be greater than min BPM!"</string>
    <string name="bpmHeader">At %1$s BPM</string>
    <string name="lift">Lift</string>
</resources>
