<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.duraz0rz.suddenpluscalculator.SuddenPlusTable">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow>
            <TextView
                android:id="@+id/txtHiSpeedHeader"
                android:text="@string/hiSpeedHeader"
                android:gravity="center"
                android:padding="3dp" />

            <TextView
                android:id="@+id/txtMinBPMHeader"
                android:text="@string/minBPMHeaderPlaceholder"
                android:gravity="center"
                android:padding="3dp" />

            <TextView
                android:id="@+id/txtMaxBPMHeader"
                android:text="@string/maxBPMHeaderPlaceholder"
                android:gravity="center"
                android:padding="3dp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
